--- a/internship.html
+++ b/internship.html
@@ -41,10 +41,34 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://newamerica.applytojob.com/apply/5CNdL5tAYu/Fall-2019-Communications-Intern-Paid'>Fall 2019 Communications Intern (Paid) - New America - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='http://newamerica.applytojob.com/apply/BFdhFV9ckr/Fall-2019-Political-Reform-Internship-Paid'>Fall 2019 - Political Reform Internship (Paid) - New America - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='http://newamerica.applytojob.com/apply/8ltBBtLywt/Education-Policy-Intern-Higher-Education-Paid'>Education Policy Intern- Higher Education (Paid) - New America - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='http://dosomething.applytojob.com/apply/3OYhbQz3SL/DSS-Research-And-Strategy-Intern-Fall-2019-Spring-2020'>DSS Research and Strategy Intern (Fall 2019- Spring 2020) - DoSomething.org - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='http://newamerica.applytojob.com/apply/zEAuNjl3XN/Summer-2019-Education-Policy-Digital-Communications-Intern-paid'>Summer 2019 - Education Policy Digital Communications Intern (paid) - New America - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='http://newamerica.applytojob.com/apply/mk2vPYdqPt/Fall-Internship-With-Blockchain-Trust-Accelerator-BTA-At-New-America'>Fall Internship with Blockchain Trust Accelerator (BTA) at New America - New America - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
 <h5><a href='http://lovecrafts.recruiterbox.com/jobs/fk03f1w'>
     Content Coordinator - Internship at LoveCrafts
 </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='https://shijigroup.join.com/jobs/252054-sales-operations-intern-m-f-for-students-only'>Job @ Shiji (Berlin): Sales Operations Intern (m/f... | JOIN</a></h5> 
@@ -125,7 +149,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999692229837-intern'>ShopUp Intern | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999692229837-intern'>ShopUp Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dhaka, Bangladesh</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -157,7 +181,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ideapublicschools-english/job/oADh9fwn'>IDEA Public Schools Careers - Licensed Specialist in School Psychology Intern - Lower Valley (19-20)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ideapublicschools-english/job/oADh9fwn'>IDEA Public Schools Careers - Licensed Specialist in School Psychology Intern - Lower Valley (19-20)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -233,7 +257,7 @@
 <p><span class="badge badge-light">Ghent, BE</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787490'>Job Application for Channel Sales Intern at Lightspeed ENG</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787490'>Job Application for Channel Sales Intern at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Ghent, BE</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -249,7 +273,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/velodyne/jobs/1762722'>Job Application for Intern at Velodyne</a></h5> 
+<h5><a href='https://boards.greenhouse.io/velodyne/jobs/1762722'>Job Application for Intern at Velodyne</a></h5> 
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -265,11 +289,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://studyportals.workable.com/j/31B6D169F0'>Studyportals - Jobs: B2B Marketing Internship - Apply online</a></h5> 
+<h5><a href='https://studyportals.workable.com/j/31B6D169F0'>Studyportals - Jobs: B2B Marketing Internship - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://geoblink.workable.com/j/E9C42F0A2C'>Geoblink - Jobs: Finance &amp; Admin Assistant (Internship) - Apply online</a></h5> 
+<h5><a href='https://geoblink.workable.com/j/E9C42F0A2C'>Geoblink - Jobs: Finance &amp; Admin Assistant (Internship) - Apply online</a></h5> 
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -322,7 +346,7 @@ Stuart.</p>
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/HubbardtonForge/743999689534510-digital-marketing-intern'>Hubbardton Forge Digital Marketing Intern | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HubbardtonForge/743999689534510-digital-marketing-intern'>Hubbardton Forge Digital Marketing Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -435,30 +459,6 @@ Stuart.</p>
 <h5><a href='https://emailmeter.recruiterbox.com/jobs/fk0ja4o/'>
     Sales Development Intern at Email Meter
 </a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/helpsystems/job/oKPBafw4'>HelpSystems Careers - Sales Intern/Trainee</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='http://unitednationsfoundation.applytojob.com/apply/NupbTtsuto/Intern-FP2020'>Intern, FP2020 - United Nations Foundation - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='http://unitednationsfoundation.applytojob.com/apply/9rnViliEDe/Intern-Programs-Girl-Up'>Intern, Programs, Girl Up - United Nations Foundation - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='http://unitednationsfoundation.applytojob.com/apply/rzo5VBGk13/Intern-Universal-Access-Project'>Intern, Universal Access Project - United Nations Foundation - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='http://unitednationsfoundation.applytojob.com/apply/JYdQotAbz6/Intern-Development-Nothing-But-Nets'>Intern, Development, Nothing But Nets - United Nations Foundation - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='http://unitednationsfoundation.applytojob.com/apply/O6zlurPjEk/Intern-Grassroots-Advocacy-ShotLife'>Intern, Grassroots Advocacy, Shot@Life - United Nations Foundation - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
