--- a/data-engineer.html
+++ b/data-engineer.html
@@ -208,7 +208,7 @@ broad disciplines from software, artificial intelligence/machine learning, elect
 <p><span class="badge badge-light">Campbell California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/infoblox/job/o4Wjafwd'>Infoblox Careers - Data Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/infoblox/job/o4Wjafwd'>Infoblox Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light">Bangalore Bangalore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -294,7 +294,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Michigan, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/peloton/jobs/1785788'>Job Application for Director of Data Engineering at Peloton</a></h5> 
+<h5><a href='https://boards.greenhouse.io/peloton/jobs/1785788'>Job Application for Director of Data Engineering at Peloton</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -447,11 +447,11 @@ YOUR TEAM. The successful candidate will join the team responsible for the?...</
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/freshbooks/jobs/1771243'>Job Application for Senior Data Engineer at FreshBooks</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/freshbooks/jobs/1771243'>Job Application for Senior Data Engineer at FreshBooks</a></h5> 
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://atypon-systems-inc.workable.com/j/3E0A798C0C?viewed=true'>Machine Learning / AI / Big Data Engineer ... - Atypon Systems - Jobs</a></h5> 
+<h5><a href='https://atypon-systems-inc.workable.com/j/3E0A798C0C?viewed=true'>Machine Learning / AI / Big Data Engineer ... - Atypon Systems - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Machine Learning / AI / Big Data Engineer, Athens at 
 Atypon Systems.</p>
